force-app/main/default/objects/Company_Intake__c/Company_Intake__c.object-meta.xml
<CustomObject>
    <description>Set of questions pertaining to a particular desired volunteer event at this company.</description>
    <label>Company Intake</label>
    <nameField>
        <displayFormat>intake{000000}</displayFormat>
        <label>Company Intake Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Intakes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>