force-app/main/default/objects/Company_Intake__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Company_Intakes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>