force-app/main/default/objects/Company_Intake__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <formula>Company__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Id</label>
    <type>Text</type>
</CustomField>