force-app/main/default/objects/Company_Intake__c/fields/Earliest_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date__c</fullName>
    <inlineHelpText>Earliest date they could do project</inlineHelpText>
    <label>Earliest Date</label>
    <type>Date</type>
</CustomField>