force-app/main/default/objects/Company_Intake__c/fields/Info_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Info_Deadline__c</fullName>
    <label>Info Deadline</label>
    <type>DateTime</type>
</CustomField>