force-app/main/default/objects/Company_Intake__c/fields/Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Date__c</fullName>
    <inlineHelpText>Latest date they could do project</inlineHelpText>
    <label>Latest Date</label>
    <type>Date</type>
</CustomField>