force-app/main/default/objects/Company_Intake__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provided by Client</fullName>
            </value>
            <value>
                <fullName>Purchased Nearby</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
            <value>
                <fullName>No lunch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>