force-app/main/default/objects/Company_Intake__c/fields/Lunch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Notes__c</fullName>
    <label>Lunch Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>