force-app/main/default/objects/Company_Intake__c/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <inlineHelpText>If prior service was managed by an external group indicate name of group here.</inlineHelpText>
    <label>Managed By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>