force-app/main/default/objects/Company_Intake__c/fields/Number_of_Volunteers_maximum__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers_maximum__c</fullName>
    <inlineHelpText>Maximum number of volunteers expected</inlineHelpText>
    <label>Number of Volunteers (maximum)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>