force-app/main/default/objects/Company_Intake__c/fields/Number_of_Volunteers_minimum__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers_minimum__c</fullName>
    <inlineHelpText>Approximate minimum number of volunteers expected (or exact number if known)</inlineHelpText>
    <label>Number of Volunteers (minimum)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>