force-app/main/default/objects/Company_Intake__c/fields/Number_of_Volunteers_Notes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers_Notes__c</fullName>
    <label>Number of Volunteers Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>