force-app/main/default/objects/Company_Intake__c/fields/Other_Impact_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Impact_Area__c</fullName>
    <inlineHelpText>Use if &quot;Other&quot; is selected for &quot;Impact Area&quot;</inlineHelpText>
    <label>Other Impact Area</label>
    <length>40</length>
    <type>Text</type>
</CustomField>