force-app/main/default/objects/Company_Intake__c/fields/Other_Special_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Considerations__c</fullName>
    <inlineHelpText>Use if &quot;Other&quot; selected above.</inlineHelpText>
    <label>Other Special Considerations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>