force-app/main/default/objects/Company_Intake__c/fields/Other_Transportation_Preference__c.field-meta.xml
<CustomField>
    <fullName>Other_Transportation_Preference__c</fullName>
    <inlineHelpText>Use if &quot;Other&quot; selected in &quot;Transportation Preferences&quot;</inlineHelpText>
    <label>Other Transportation Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>