force-app/main/default/objects/Company_Intake__c/fields/Other_Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Work__c</fullName>
    <inlineHelpText>Use if &quot;Other&quot; is selected above in &quot;Type of Work&quot;</inlineHelpText>
    <label>Other Type of Work</label>
    <length>40</length>
    <type>Text</type>
</CustomField>