force-app/main/default/objects/Company_Intake__c/fields/Preferred_Setting__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Setting__c</fullName>
    <inlineHelpText>Select preferred setting if any.</inlineHelpText>
    <label>Preferred Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoors</fullName>
            </value>
            <value>
                <fullName>Outdoors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>