force-app/main/default/objects/Company_Intake__c/fields/Prior_Experience__c.field-meta.xml
<CustomField>
    <fullName>Prior_Experience__c</fullName>
    <inlineHelpText>Describe prior days of service</inlineHelpText>
    <label>Prior Experience</label>
    <type>TextArea</type>
</CustomField>