force-app/main/default/objects/Company_Intake__c/fields/Prior_Impact_Areas__c.field-meta.xml
<CustomField>
    <fullName>Prior_Impact_Areas__c</fullName>
    <label>Prior Impact Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Children &amp; Youth Education</fullName>
            </value>
            <value>
                <fullName>Civic &amp; Community</fullName>
            </value>
            <value>
                <fullName>Disaster &amp; Emergency Services</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Faith-Based Service</fullName>
            </value>
            <value>
                <fullName>Family Services</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Hunger &amp; Homelessness</fullName>
            </value>
            <value>
                <fullName>Immigrant &amp; Refugee Services</fullName>
            </value>
            <value>
                <fullName>International Service</fullName>
            </value>
            <value>
                <fullName>Internships &amp; Employment</fullName>
            </value>
            <value>
                <fullName>Justice &amp; Legal Services</fullName>
            </value>
            <value>
                <fullName>Schools</fullName>
            </value>
            <value>
                <fullName>Senior Services</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>