force-app/main/default/objects/Company_Intake__c/fields/Prior_Service__c.field-meta.xml
<CustomField>
    <fullName>Prior_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this client participated in a day of service before, whether through Boston Cares or otherwise?</inlineHelpText>
    <label>Prior Service</label>
    <type>Checkbox</type>
</CustomField>