force-app/main/default/objects/Company_Intake__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <inlineHelpText>Preferences about Project Location</inlineHelpText>
    <label>Project Location</label>
    <type>TextArea</type>
</CustomField>