force-app/main/default/objects/Company_Intake__c/fields/Schedule_Preference__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Preference__c</fullName>
    <inlineHelpText>Is there a preference for the day(s) of the week?  Morning or afternoon?</inlineHelpText>
    <label>Schedule Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekday morning</fullName>
            </value>
            <value>
                <fullName>Weekday afternoon</fullName>
            </value>
            <value>
                <fullName>Weekday evening</fullName>
            </value>
            <value>
                <fullName>Weekday any time</fullName>
            </value>
            <value>
                <fullName>Weekend morning</fullName>
            </value>
            <value>
                <fullName>Weekend afternoon</fullName>
            </value>
            <value>
                <fullName>Weekend evening</fullName>
            </value>
            <value>
                <fullName>Weekend any time</fullName>
            </value>
            <value>
                <fullName>Monday morning</fullName>
            </value>
            <value>
                <fullName>Monday afternoon</fullName>
            </value>
            <value>
                <fullName>Monday evening</fullName>
            </value>
            <value>
                <fullName>Monday any time</fullName>
            </value>
            <value>
                <fullName>Tuesday morning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>