force-app/main/default/objects/Company_Intake__c/fields/Self_Managed__c.field-meta.xml
<CustomField>
    <fullName>Self_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was prior service done on the client&apos;s own (versus externally organized)?</inlineHelpText>
    <label>Self Managed</label>
    <type>Checkbox</type>
</CustomField>