force-app/main/default/objects/Company_Intake__c/fields/Special_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Special_Considerations__c</fullName>
    <label>Special Considerations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Handicap Accessible</fullName>
            </value>
            <value>
                <fullName>Bring Employee Children</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>