force-app/main/default/objects/Company_Intake__c/fields/Target_Dates_Notes__c.field-meta.xml
<CustomField>
    <fullName>Target_Dates_Notes__c</fullName>
    <label>Target Dates Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>