force-app/main/default/objects/Company_Intake__c/fields/Timeframe_Notes__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Notes__c</fullName>
    <label>Timeframe Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>