force-app/main/default/objects/Company_Intake__c/fields/Transit_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Transit_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the project need to be accessible via public transportation?</inlineHelpText>
    <label>Transit Accessible</label>
    <type>Checkbox</type>
</CustomField>