force-app/main/default/objects/Company_Intake__c/fields/Transportation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Notes__c</fullName>
    <label>Transportation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>