force-app/main/default/objects/Company_Intake__c/fields/Transportation_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Preferences__c</fullName>
    <label>Transportation Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Transportation Accessible</fullName>
            </value>
            <value>
                <fullName>Private Buses Drop-off Area</fullName>
            </value>
            <value>
                <fullName>Car Parking</fullName>
            </value>
            <value>
                <fullName>Walking Distance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>