force-app/main/default/objects/Company_Intake__c/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <inlineHelpText>Select one or more types of work of interest to the client.</inlineHelpText>
    <label>Type of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Organizing Supplies</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Food Sorting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>