force-app/main/default/objects/Company_Intake__c/validationRules/volunteer_min_max.validationRule-meta.xml
<ValidationRule>
    <fullName>volunteer_min_max</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Volunteers_minimum__c &gt;  Number_of_Volunteers_maximum__c</errorConditionFormula>
    <errorDisplayField>Number_of_Volunteers_minimum__c</errorDisplayField>
    <errorMessage>Minimum volunteers cannot exceed Maximum volunteers.</errorMessage>
</ValidationRule>